<resources>
    <string name="app_name">Solasta</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Solasta 2k20</string>
    <string name="nav_header_subtitle">Rewrite the Stars 🌟</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_events">Events</string>
    <string name="menu_aboutUs">About Us</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_team">Team</string>
    <string name="copyrights_solasta">Copyright © 2019 IIITDM Kurnool. All rights reserved.</string>
    <string name="about_solasta">Solasta is a techno-cultural fest organized by the student community of IIITDM Kurnool and is aimed to develop the leadership and organizational skills in students. The annual fest includes many technical and cultural events with participants and audience from various colleges.</string>
    <string-array name="events_images">
        <item>http://www.solasta.org.in/static/media/treasure.01719994.png</item>
        <item>http://www.solasta.org.in/static/media/stayHungry.98e780d6.jpg</item>
        <item>http://www.solasta.org.in/static/media/privateEye.69953845.jpeg</item>

        <item>http://www.solasta.org.in/static/media/MC.72961613.jpg</item>
        <item>http://www.solasta.org.in/static/media/raiseCurtain.17cb1b22.jpg</item>
        <item>http://www.solasta.org.in/static/media/spot.abdb1ffc.jpg</item>

        <item>http://www.solasta.org.in/static/media/BOB.4294233a.png</item>
        <item>http://www.solasta.org.in/static/media/ROOHANIYAT.3b9ee79a.png</item>

        <item>http://www.solasta.org.in/static/media/btud.215f8e5f.png</item>
        <item>http://www.solasta.org.in/static/media/hoedown.d0137da4.jpg</item>
        <item>http://www.solasta.org.in/static/media/splash.ae8757f6.png</item>

        <item>http://www.solasta.org.in/static/media/DataScience.19407b3a.jpg</item>
        <item>http://www.solasta.org.in/static/media/revcoding.36b4c065.jpg</item>
        <item>http://www.solasta.org.in/static/media/codeon.5df09569.jpg</item>
        <item>http://www.solasta.org.in/static/media/appathon.3e066592.png</item>

        <item>http://www.solasta.org.in/static/media/construss.c561b65d.jpg</item>
        <item>http://www.solasta.org.in/static/media/FdotS.24cf5d9d.png</item>
        <item>http://www.solasta.org.in/static/media/CAD.84077964.png</item>

        <item>http://www.solasta.org.in/static/media/cyber.633301af.jpg</item>

        <item>http://www.solasta.org.in/static/media/theme.e893f948.png</item>
        <item>http://www.solasta.org.in/static/media/selfie.f6c9050c.png</item>
        <item>http://www.solasta.org.in/static/media/poser.8fabb0e5.png</item>
        <item>http://www.solasta.org.in/static/media/colDrama.4b425cc7.png</item>
        <item>http://www.solasta.org.in/static/media/pro.74f46558.png</item>


    </string-array>
    <string-array name="events_titles">
        <item>Treasure Hunt</item>
        <item>Stay Hungry</item>
        <item>Private Eye</item>

        <item>Mannequin Challenge</item>
        <item>Raise the Curtain</item>
        <item>Spot Light</item>

        <item>Battle of Bands</item>
        <item>Roohaniyat</item>

        <item>Bop Till U Drop</item>
        <item>Hoedown</item>
        <item>Splash It</item>

        <item>Are You There?</item>
        <item>Reverse Coding</item>
        <item>Code ON</item>
        <item>App-A-Thon</item>

        <item>Construss</item>
        <item>FdotS</item>
        <item>The CAD Competition</item>

        <item>Cyber Security</item>

        <item>Theme Photography</item>
        <item>Huge Selfie</item>
        <item>#poster</item>
        <item>College Drama</item>
        <item>Pro-edit</item>

    </string-array>
    <string-array name="events_description">
        <item>Join the party, mate! It\'s going to be fun! on 14th March 2020 at 10 A.M.</item>
        <item>Eating competition, Fastest win it all! on 14th March from 12:00 P.M. - 1:00 P.M.</item>
        <item>Explore the Sherlock in you</item>

        <item>-</item>
        <item>-</item>
        <item>The best time to shine in the era of walking shadows on March 13th 2020, Time: 17:00 – 19:00.</item>

        <item>15 March 4:00 P.M. onwards, Venue:The Stage</item>
        <item>Solo Singing Competition, March 14th 2020, 2:00 P.M. onward, Venue:The Institute Seminar Hall</item>

        <item>Group Dance(Min. 4 members, Max. Time 4 Minutes), Registration fee is applicable</item>
        <item>For Solo performance Max. Duration:4 Minutes, For Duo performance Max. Duration:4 Minutes, Registration fee is applicable</item>
        <item>Registration fee is applicable</item>

        <item>SO, guessing what is it right.... We are going to conduct a machine learning competition for which the clue for the question is given above "are you there?" Let me add 1 more.. its going to be a classification problem guys.</item>
        <item>Put on your thinking caps and train your natural neural networks. For reverse coding will have you recognizing patterns in functions and replicating them. You will be given a set of executable files that accept input and give an output after performing some function on them. Your task is to figure out what function is hidden in the code and replicate it.</item>
        <item>Coding competition consisting of 5 question.</item>
        <item>Participants have to choose one among the five given topics and make a Web/Android/IOS application on that topic.</item>

        <item>To design a truss/suspension bridge using popsicle sticks, cotton strings and adhesive(without using any strengthening coating) that can sustain the maximum possible load and can satisfy all the understated constraints.</item>
        <item>A 2-tier event which tests your recollection and practical application of concepts of mechanics and aerodynamics.</item>
        <item>To be conducted at SOLASTA 2020. Registrations are open and people are flooding the counters to get to compete in this event and win exciting rewards. You too can earn Some easy money by registering before 11:59 PM, 11th march</item>

        <item>A hands on session on cyber-security</item>

        <item>A theme is an overarching concept that a photographer adheres to. Using photography themes is a great way to inspire creativity. So, add focus to your creative energy and snap the best on the below-mentioned themes to grab the prize money!</item>
        <item>It\’s so simple! Participants just have to click a selfie. Twist is that the selfie with the maximum number of people in the pic wins! So, make sure you grab people and create a good shot of many smiling faces.</item>
        <item>A pair of photographer and a poser can participate in this event. While one poses for a product (given by the organizer), the other should create a good shot that shows off product and also features the poser. The event goes like you are in a photo shoot where the participating pair is a brand ambassador and a cameraman.</item>
        <item>Participants should submit photographs taken outdoors i.e., your best shots of our college, displaying elements like infrastructure, plants or routines at our college or close-ups of natural scenes on our hills. Shoot the best out of our college and submit us to win!</item>
        <item>Participants need to edit the photographs at it\'s best, to look more eye-catching. So, upgrade the snap till its attractive mark and win the prize money! Photos will be sent to participants after the registration.</item>

    </string-array>
</resources>